--- a/Varberg Kod Anpassningar - Varbergskartan/anpassadeVarberg/client/src/less/custom.less
+++ b/Varberg Kod Anpassningar - Varbergskartan/anpassadeVarberg/client/src/less/custom.less
@@ -49,3 +49,7 @@
   border: 2px solid @brand-primary;
   border-radius: 4px;
 }
+
+.btn-primary.btn-toolbar:hover {
+  background-color: @brand-primary;
+}
